[Spring 지하철 노선도 - 2단계] 토닉(최우석) 미션 제출합니다. (#231)
* docs: 요구사항 정리

* feat: 중복된 이름의 지하철역 예외 처리 구현

* feat: 컨트롤러와 서비스 레이어 분리 & 역 삭제 기능 구현

* feat: 의존성 관리 클래스 구현

* refactor: stationDao의 검증 로직을 service로 이동

* feat(LineDao): 지하철 노선 등록 기능 구현

* feat(LineDao): 지하철 노선 목록 조회 기능 구현

* feat(LineDao): 지하철 노선 조회 기능 구현

* feat(LineDao): 지하철 노선 수정 기능 구현

* feat(LineDao): 지하철 노선 삭제 기능 구현

* feat(LineController): 지하철 노선 저장 API 구현

* feat(LineController): 지하철 노선 목록 조회 API 구현

* feat(LineController): 지하철 노선 조회 API 구현

* feat(LineController): 지하철 노선 수정 API 구현

* feat(LineController): 지하철 노선 삭제 API 구현

* feat(LineController): 중복된 이름의 노선 등록시 예외 처리

* style: 코드 컨벤션 통일 & 네이밍 수정

* chore: h2 db 연결 설정

* refactor: spring IoC 컨테이너 사용

* chore: 테스트 db 환경 분리

* feat(StationDao): DB 연결 적용

* feat(LineDao): DB 연결 적용

* style: 불필요한 import문 제거 & 컨벤션 통일

* fix: test 간 데이터베이스에 관여하지 않도록 수정

* fix: test 간 데이터베이스에 관여하지 않도록 수정

* fix: json 값으로 객체가 생성되지 않던 에러 해결

* refactor: id에 맞는 데이터를 못찾을 때 발생하는 예외 메시지 수정

* refactor: 테스트 메서드 간 DB를 독립적으로 하도록 수정

* refactor: DB에 id에 맞는 데이터가 있는지 검증하는 로직 수정

* feat: 지하철 노선을 수정할 때 중복된 이름을 요청할 때 예외 처리

* feat: 지하철 노선 삭제 시 400 예외 상황 처리

* test: 지하철 노선을 수정할 때 id에 맞는 노선이 없을 때 404 상태 반환 테스트 구현

* test: 제거하려는 id에 맞는 역이 없을 때 404 상태 반환 테스트 구현

* refactor: 중복된 역 이름으로 생성 시 service 계층에서 예외 처리

Co-authored-by: Seongwon97 <osw970325@naver.com>